--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ exclude = ["test_assets/*"] # Don't upload files for testing
 
 [dependencies]
 ogg = "^0.8"
-audiopus = "^0.2" 
+audiopus = "=0.3.0-rc.0" 
 byteorder = "^1.3"
 thiserror = "^1.0"
 rand = "^0.8"
